# niezbednik-harcerski

./: CMakeLists.txt  README.md  com.hps.HPS.appdata.xml  com.hps.HPS.desktop  deploy.sh
doc/: setup.conf  wprowadzenie.html  wprowadzenie.org
src/: CMakeLists.txt  Cipher.cpp  Cipher.h  Clipboard.cpp  Clipboard.h  Decipher.cpp  Decipher.h  HPSCardModel.cpp  HPSCardModel.h  HPSColumnView.cpp  HPSColumnView.h  HPSColumnView_p.h  HPSDatabase.cpp  HPSDatabase.h  HPSFilter.cpp  HPSFilter.h  HPSGame.cpp  HPSGame.h  HPSGameKeyHandler.cpp  HPSGameKeyHandler.h  HPSGamePlayer.cpp  HPSGamePlayer.h  HPSGameScreen.cpp  HPSGameScreen.h  HPSGameTile.cpp  HPSGameTile.h  HPSIcon.cpp  HPSIcon.h  HPSImage.h  HPSPakowanie.cpp  HPSPakowanie.h  HPSSettings.cpp  HPSSettings.h  HPSSms.cpp  HPSSms.h  HPSTranslate.cpp  HPSTranslate.h  HPSUnits.cpp  HPSUnits.h  InfoData.cpp  (+7 more)
src/android/: AndroidManifest.xml  build.gradle  version.gradle.in
src/android/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml  splash.xml
src/android/res/mipmap-anydpi-v26/: ic_launcher_backup2.xml
src/android/res/values/: apptheme.xml
src/android/src/com/hps/HPS/: SMSActivity.java
src/data/: hps.db  info-data.json  metadata.desktop  pakowanie.sqlite  spiewnik1924.json  spiewnikHymny.json  spiewnikLubeka.json  spiewnikWlasne.json  spiewniki.json
src/data/contents/ui/: BaseApp.qml  HPSAbstractWindow.qml  HPSNotification.qml  HPSRow.qml  HPSScrollView.qml  HPSWindow.qml  KartaMain.qml  MainPage.qml  mobileApp.qml
src/data/contents/ui/gallery/: ArticleLabel.qml  Artykuly.qml  CategoryPage.qml  Cytat.qml  Cytat2.qml  CytatAutor.qml  CytatyPage.qml  DMB.qml  DefaultListItemBackground.qml  ElementListy.qml  ElementListyImageNoLayout.qml  ElementListyNoImage.qml  ElementListyNoLayout.qml  Grot.qml  HPSAboutPage.qml  HPSAbstractList.qml  HPSBasicPage.qml  HPSBasicScrollView.qml  HPSCard.qml  HPSCheckBox.qml  HPSCheckable.qml  HPSIcon.qml  HPSIconNoLayout.qml  HPSImage.qml  HPSListView.qml  HPSLista.qml  HPSPage.qml  HPSPopup.qml  HPSRadioButton.qml  HPSScrollView.qml  HPSSeparator.qml  HPSSmsList.qml  HPSSwipeView.qml  HPSText.qml  HZNP.qml  HZNP2.qml  Historyczne.qml  Karta.qml  KartaIkona.qml  KartaNoImage.qml  (+185 more)
src/data/contents/ui/gallery/i18n/: translation_ua.ts  translation_uk.ts
src/data/contents/ui/gallery/malaKsiega/: alfa-liczbowy.qml  bacon.qml  cezar.qml  czeko.qml  gade.qml  grupowy.qml  kaczor.qml  ksiazkowy.qml  liczbowy.qml  mafeking.qml  morse.qml  przedmowa.qml  rozbiezny.qml  ulamkowy.qml  wsteczny.qml
src/data/contents/ui/gallery/poradnikHS/: cechy.qml  formy.qml  inspiracje.qml  instrumenty.qml  konspekty.qml  obrzedowosc.qml  plan.qml  projekt.qml  stopnie.qml  systemkar.qml  wprowadzenie.qml  zastepowy.qml
src/data/contents/ui/gallery/poradnikWedro/: filary.qml  formy.qml  inspiracje.qml  instrumenty.qml  rys.qml  zastepowy.qml  zbiorka.qml
src/data/contents/ui/gallery/spiewnik1924/: Marcysia.qml  czyWRadzie.qml  druzyna.qml  hejSokoly.qml  jasko.qml  juzRok.qml  madelon.qml  mysmy.qml  naKresach.qml  niechOrly.qml  niedaleko.qml  niema.qml  podKrakowem.qml  podTwa.qml  przybyli.qml  przylecieli.qml  ptacy.qml  raduje.qml  razDwa.qml  uNas.qml  ulani.qml  wMurowanej.qml  wStarym.qml  wojence.qml  wstan.qml  zaGorami.qml
src/data/contents/ui/gallery/szyfrator/: alfa-liczbowy.qml  bacon.qml  cezar.qml  gade.qml  kaczor.qml  mafeking.qml  morse.qml  rozbiezny.qml
src/data/contents/ui/gallery/terenowe/: bledy.qml  dodatkowe.qml  inspiracje.qml  jakBudowac.qml  jakTlumaczyc.qml  koordynaty.qml  mechanika.qml  punkty.qml
src/data/contents/ui/gallery/wiedzminLARP/: Postac.qml  demony.qml  wprowadzenie.qml  zasady.qml
src/data/contents/ui/gallery/wlasne/: chleb.qml  iskierka.qml  lecaiskry.qml  nieMasz.qml  niechSie.qml  wkregu.qml
src/data/contents/ui/img/: .kedyw.txt.kate-swp
src/data/contents/ui/media/: gesty1.mkv  gesty2.mkv  gesty3.mkv  music.opus
